--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "url": "https://github.com/kakts/tweet-cleaner.git"
   },
   "dependencies": {
+    "JSONStream": "^1.3.3",
     "csvtojson": "^1.1.6",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "neo-async": "^2.2.0",
-    "twitter": "^1.6.0"
+    "twitter": "^1.7.1"
   }
 }
